--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 services:
-  donations:
+  donations: &donations
     image: "node:20.12"
     labels:
       traefik.enable: "true"
@@ -18,6 +18,13 @@ services:
     environment:
       JWT_SECRET: "${JWT_SECRET:-foobar}"
       MONGODB_URL: "mongodb://database/donations"
+  install:
+    <<: *donations
+    command:
+      - "npm"
+      - "install"
+    profiles:
+      - "deploy"
   database:
     image: "mongo:7.0"
     volumes:
