--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enchentes-app-br/donations",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0",
   "description": "Donations Service",
   "type": "module",
   "main": "index.js",
